car-centred refactor: listing entity fully removed