@@ -1,10 +1,10 @@
 package ar.edu.itba.paw.services;
 
 import java.math.BigDecimal;
+import java.time.Instant;
 import java.time.LocalDate;
 import java.time.LocalTime;
-import java.time.OffsetDateTime;
-import java.util.Collections;
+import java.time.ZonedDateTime;
 import java.util.List;
 import java.util.Optional;
 
@@ -16,13 +16,14 @@ import org.mockito.Mock;
 import org.mockito.Mockito;
 import org.mockito.junit.jupiter.MockitoExtension;
 
-import ar.edu.itba.paw.exception.listing.ListingValidationException;
-import ar.edu.itba.paw.exception.reservation.ReservationConflictException;
 import ar.edu.itba.paw.models.domain.AvailabilityPeriod;
-import ar.edu.itba.paw.models.domain.Listing;
+import ar.edu.itba.paw.models.domain.Car;
 import ar.edu.itba.paw.models.domain.ListingAvailability;
-import ar.edu.itba.paw.models.domain.Reservation;
+import ar.edu.itba.paw.models.dto.BookableSegmentProjection;
 import ar.edu.itba.paw.persistence.ListingAvailabilityDao;
+import ar.edu.itba.paw.services.policy.ListingAvailabilityPolicy;
+import ar.edu.itba.paw.services.policy.ReservationTimingPolicy;
+import ar.edu.itba.paw.services.util.ListingAddressFormatter;
 
 @ExtendWith(MockitoExtension.class)
 public class ListingAvailabilityServiceImplTest {
@@ -33,40 +34,65 @@ public class ListingAvailabilityServiceImplTest {
     @Mock
     private ReservationService reservationService;
 
+    @Mock
+    private ReservationTimingPolicy reservationTimingPolicy;
+
+    @Mock
+    private ListingAvailabilityPolicy listingAvailabilityPolicy;
+
+    @Mock
+    private ListingAddressFormatter listingAddressFormatter;
+
     @InjectMocks
     private ListingAvailabilityServiceImpl listingAvailabilityService;
 
-    @Test
-    public void testCreateReturnsPersistedRow() {
-        final long listingId = 40L;
-        final LocalDate start = LocalDate.of(2026, 6, 1);
-        final LocalDate end = LocalDate.of(2026, 6, 30);
-        final OffsetDateTime createdAt = OffsetDateTime.parse("2026-05-01T10:00:00Z");
-        final OffsetDateTime updatedAt = OffsetDateTime.parse("2026-05-01T10:05:00Z");
-        final Listing listingRef = Mockito.mock(Listing.class);
-        Mockito.when(listingRef.getId()).thenReturn(listingId);
-        final ListingAvailability row = new ListingAvailability(900L, listingRef, start, end, createdAt, updatedAt);
-        Mockito.when(listingAvailabilityDao.create(listingId, start, end, null)).thenReturn(row);
+    private static final long CAR_ID = 42L;
+    private static final BigDecimal PRICE = new BigDecimal("100.00");
+    private static final LocalTime CHECK_IN = LocalTime.of(10, 0);
+    private static final LocalTime CHECK_OUT = LocalTime.of(18, 0);
 
-        final ListingAvailability result = listingAvailabilityService.create(listingId, start, end);
-
-        Assertions.assertEquals(row, result);
-        Assertions.assertEquals(900L, result.getId());
-        Assertions.assertEquals(listingId, result.getListingId());
-        Assertions.assertEquals(start, result.getStartInclusive());
-        Assertions.assertEquals(end, result.getEndInclusive());
+    private static ListingAvailability buildAvailability(
+            final long id,
+            final long carId,
+            final LocalDate start,
+            final LocalDate end,
+            final ListingAvailability.Kind kind) {
+        final Car carRef = Mockito.mock(Car.class);
+        Mockito.lenient().when(carRef.getId()).thenReturn(carId);
+        return ListingAvailability.builder()
+                .id(id)
+                .car(carRef)
+                .startInclusive(start)
+                .endInclusive(end)
+                .dayPrice(PRICE)
+                .startPointStreet("Street")
+                .checkInTime(CHECK_IN)
+                .checkOutTime(CHECK_OUT)
+                .kind(kind)
+                .build();
     }
 
     @Test
-    public void testFindByListingIdReturnsListFromDao() {
-        final long listingId = 7L;
-        final OffsetDateTime t = OffsetDateTime.parse("2026-04-01T12:00:00Z");
-        final Listing listingRef = Mockito.mock(Listing.class);
-        final ListingAvailability a = new ListingAvailability(1L, listingRef, LocalDate.of(2026, 5, 1), LocalDate.of(2026, 5, 10), t, t);
-        final ListingAvailability b = new ListingAvailability(2L, listingRef, LocalDate.of(2026, 6, 1), LocalDate.of(2026, 6, 15), t, t);
-        Mockito.when(listingAvailabilityDao.findByListingId(listingId)).thenReturn(List.of(a, b));
+    public void testFindByIdDelegatesToDao() {
+        final ListingAvailability row = buildAvailability(900L, CAR_ID,
+                LocalDate.of(2026, 6, 1), LocalDate.of(2026, 6, 30), ListingAvailability.Kind.OFFERED);
+        Mockito.when(listingAvailabilityDao.findById(900L)).thenReturn(Optional.of(row));
 
-        final List<ListingAvailability> result = listingAvailabilityService.findByListingId(listingId);
+        final Optional<ListingAvailability> result = listingAvailabilityService.findById(900L);
+
+        Assertions.assertTrue(result.isPresent());
+        Assertions.assertSame(row, result.get());
+    }
+
+    @Test
+    public void testFindByCarIdReturnsListFromDao() {
+        final ListingAvailability a = buildAvailability(1L, CAR_ID,
+                LocalDate.of(2026, 5, 1), LocalDate.of(2026, 5, 10), ListingAvailability.Kind.OFFERED);
+        final ListingAvailability b = buildAvailability(2L, CAR_ID,
+                LocalDate.of(2026, 6, 1), LocalDate.of(2026, 6, 15), ListingAvailability.Kind.OFFERED);
+        Mockito.when(listingAvailabilityDao.findByCarId(CAR_ID)).thenReturn(List.of(a, b));
+
+        final List<ListingAvailability> result = listingAvailabilityService.findByCarId(CAR_ID);
 
         Assertions.assertEquals(2, result.size());
         Assertions.assertEquals(a, result.get(0));
@@ -74,166 +100,160 @@ public class ListingAvailabilityServiceImplTest {
     }
 
     @Test
-    public void testFindByListingIdsEndingOnOrAfterReturnsListFromDao() {
+    public void testFindByCarIdsEndingOnOrAfterReturnsListFromDao() {
         final List<Long> ids = List.of(10L, 20L);
         final LocalDate minEnd = LocalDate.of(2026, 7, 1);
-        final OffsetDateTime t = OffsetDateTime.parse("2026-05-02T08:00:00Z");
-        final ListingAvailability row =
-                new ListingAvailability(3L, Mockito.mock(Listing.class), LocalDate.of(2026, 6, 1), LocalDate.of(2026, 8, 1), t, t);
-        Mockito.when(listingAvailabilityDao.findByListingIdsEndingOnOrAfter(ids, minEnd)).thenReturn(List.of(row));
+        final ListingAvailability row = buildAvailability(3L, 10L,
+                LocalDate.of(2026, 6, 1), LocalDate.of(2026, 8, 1), ListingAvailability.Kind.OFFERED);
+        Mockito.when(listingAvailabilityDao.findByCarIdsEndingOnOrAfter(ids, minEnd)).thenReturn(List.of(row));
 
         final List<ListingAvailability> result =
-                listingAvailabilityService.findByListingIdsEndingOnOrAfter(ids, minEnd);
+                listingAvailabilityService.findByCarIdsEndingOnOrAfter(ids, minEnd);
 
         Assertions.assertEquals(1, result.size());
         Assertions.assertEquals(row, result.get(0));
     }
 
-    @Test
-    public void testDeleteByListingIdDoesNotThrow() {
-        final long listingId = 99L;
-        Assertions.assertDoesNotThrow(() -> listingAvailabilityService.deleteByListingId(listingId));
+
+    private static ListingAvailability buildAvailabilityWith(
+            final long id, final long carId,
+            final LocalDate start, final LocalDate end,
+            final BigDecimal price, final LocalTime checkIn, final LocalTime checkOut,
+            final String street) {
+        final Car carRef = Mockito.mock(Car.class);
+        Mockito.lenient().when(carRef.getId()).thenReturn(carId);
+        return ListingAvailability.builder()
+                .id(id)
+                .car(carRef)
+                .startInclusive(start)
+                .endInclusive(end)
+                .dayPrice(price)
+                .startPointStreet(street)
+                .checkInTime(checkIn)
+                .checkOutTime(checkOut)
+                .kind(ListingAvailability.Kind.OFFERED)
+                .build();
     }
 
-    // --- Phase 2 service contract tests below ---
-
-    private static final long LISTING_ID = 42L;
-    private static final BigDecimal PRICE = new BigDecimal("100.00");
-    private static final LocalTime CHECK_IN = LocalTime.of(10, 0);
-    private static final LocalTime CHECK_OUT = LocalTime.of(18, 0);
-
-    @Test
-    public void testApplyOwnerEditThrowsConflictWhenBlockingReservationOverlapsRemovedDay() {
-        // 1. Arrange — old [1/8, 10/8] -> new [2/8, 9/8]; reservation on day 10/8 overlaps a withdrawn chunk.
-        final LocalDate oldS = LocalDate.of(2026, 8, 1);
-        final LocalDate oldE = LocalDate.of(2026, 8, 10);
-        final LocalDate newS = LocalDate.of(2026, 8, 2);
-        final LocalDate newE = LocalDate.of(2026, 8, 9);
-        final Reservation blocking = Mockito.mock(Reservation.class);
-        Mockito.when(blocking.getStartDate())
-                .thenReturn(LocalDate.of(2026, 8, 10).atStartOfDay(AvailabilityPeriod.WALL_ZONE).toOffsetDateTime());
-        Mockito.when(blocking.getEndDate())
-                .thenReturn(LocalDate.of(2026, 8, 11).atStartOfDay(AvailabilityPeriod.WALL_ZONE).toOffsetDateTime());
-        Mockito.when(reservationService.findBlockingReservationsByListingIdInRange(
-                        Mockito.eq(LISTING_ID), Mockito.any(), Mockito.any()))
-                .thenReturn(List.of(blocking));
-
-        // 2. Act + Assert
-        Assertions.assertThrows(ReservationConflictException.class, () ->
-                listingAvailabilityService.applyOwnerEdit(
-                        LISTING_ID, oldS, oldE, newS, newE, PRICE,
-                        "Street", null, null, CHECK_IN, CHECK_OUT));
+    private static Instant farFutureInstant(final LocalDate baseDay) {
+        return ZonedDateTime.of(baseDay.minusDays(10), LocalTime.of(0, 0), AvailabilityPeriod.WALL_ZONE).toInstant();
     }
 
     @Test
-    public void testApplyOwnerEditDoesNotThrowWhenNoBlockingReservation() {
-        // 1. Arrange — old [1/8, 10/8] -> new [2/8, 9/8]; no blocking reservations.
-        Mockito.when(reservationService.findBlockingReservationsByListingIdInRange(
-                        Mockito.eq(LISTING_ID), Mockito.any(), Mockito.any()))
-                .thenReturn(Collections.emptyList());
+    public void testGetBookableSegmentsReturnsEmptyWhenNoAvailabilities() {
+        Mockito.when(listingAvailabilityDao.findByCarId(CAR_ID)).thenReturn(List.of());
+        Mockito.when(reservationService.findBlockingReservationsByCarId(CAR_ID)).thenReturn(List.of());
 
-        // 2. Act + Assert — internal createFull(...) calls return null mocks; service should not throw.
-        Assertions.assertDoesNotThrow(() -> listingAvailabilityService.applyOwnerEdit(
-                LISTING_ID,
-                LocalDate.of(2026, 8, 1), LocalDate.of(2026, 8, 10),
-                LocalDate.of(2026, 8, 2), LocalDate.of(2026, 8, 9),
-                PRICE, "Street", null, null, CHECK_IN, CHECK_OUT));
+        final List<BookableSegmentProjection> result =
+                listingAvailabilityService.getBookableSegmentsForRiderDatePickerByCar(CAR_ID, Instant.now());
+
+        Assertions.assertTrue(result.isEmpty());
+    }
+
+
+    @Test
+    public void testGetBookableSegmentsMergesContiguousDaysWithIdenticalProjection() {
+        final LocalDate aStart = LocalDate.of(2030, 9, 1);
+        final LocalDate aEnd = LocalDate.of(2030, 9, 3);
+        final LocalDate bStart = LocalDate.of(2030, 9, 4);
+        final LocalDate bEnd = LocalDate.of(2030, 9, 6);
+        final ListingAvailability a = buildAvailabilityWith(
+                20L, CAR_ID, aStart, aEnd, PRICE, CHECK_IN, CHECK_OUT, "Av. Centro");
+        final ListingAvailability b = buildAvailabilityWith(
+                21L, CAR_ID, bStart, bEnd, PRICE, CHECK_IN, CHECK_OUT, "Av. Centro");
+        Mockito.when(listingAvailabilityDao.findByCarId(CAR_ID)).thenReturn(List.of(a, b));
+        Mockito.when(reservationService.findBlockingReservationsByCarId(CAR_ID)).thenReturn(List.of());
+        Mockito.when(reservationService.getConfiguredPickupLeadHours()).thenReturn(24);
+        for (LocalDate d = aStart; !d.isAfter(aEnd); d = d.plusDays(1)) {
+            Mockito.when(listingAvailabilityDao.findEffectiveForDayByCar(CAR_ID, d)).thenReturn(Optional.of(a));
+        }
+        for (LocalDate d = bStart; !d.isAfter(bEnd); d = d.plusDays(1)) {
+            Mockito.when(listingAvailabilityDao.findEffectiveForDayByCar(CAR_ID, d)).thenReturn(Optional.of(b));
+        }
+        Mockito.when(listingAddressFormatter.formatPublicPickupLocation(a)).thenReturn("Av. Centro");
+        Mockito.when(listingAddressFormatter.formatPublicPickupLocation(b)).thenReturn("Av. Centro");
+
+        final List<BookableSegmentProjection> result =
+                listingAvailabilityService.getBookableSegmentsForRiderDatePickerByCar(CAR_ID, farFutureInstant(aStart));
+
+        Assertions.assertEquals(1, result.size());
+        Assertions.assertEquals(aStart, result.get(0).getFrom());
+        Assertions.assertEquals(bEnd, result.get(0).getTo());
     }
 
     @Test
-    public void testApplyOwnerWithdrawAvailabilityThrowsValidationWhenTargetNotFound() {
-        // 1. Arrange
-        Mockito.when(listingAvailabilityDao.findById(555L)).thenReturn(Optional.empty());
+    public void testGetBookableSegmentsKeepsSeparateWhenContiguousButDifferentPrice() {
+        final LocalDate aStart = LocalDate.of(2030, 10, 1);
+        final LocalDate aEnd = LocalDate.of(2030, 10, 3);
+        final LocalDate bStart = LocalDate.of(2030, 10, 4);
+        final LocalDate bEnd = LocalDate.of(2030, 10, 6);
+        final BigDecimal priceB = new BigDecimal("200.00");
+        final ListingAvailability a = buildAvailabilityWith(
+                30L, CAR_ID, aStart, aEnd, PRICE, CHECK_IN, CHECK_OUT, "Av. Centro");
+        final ListingAvailability b = buildAvailabilityWith(
+                31L, CAR_ID, bStart, bEnd, priceB, CHECK_IN, CHECK_OUT, "Av. Centro");
+        Mockito.when(listingAvailabilityDao.findByCarId(CAR_ID)).thenReturn(List.of(a, b));
+        Mockito.when(reservationService.findBlockingReservationsByCarId(CAR_ID)).thenReturn(List.of());
+        Mockito.when(reservationService.getConfiguredPickupLeadHours()).thenReturn(24);
+        for (LocalDate d = aStart; !d.isAfter(aEnd); d = d.plusDays(1)) {
+            Mockito.when(listingAvailabilityDao.findEffectiveForDayByCar(CAR_ID, d)).thenReturn(Optional.of(a));
+        }
+        for (LocalDate d = bStart; !d.isAfter(bEnd); d = d.plusDays(1)) {
+            Mockito.when(listingAvailabilityDao.findEffectiveForDayByCar(CAR_ID, d)).thenReturn(Optional.of(b));
+        }
+        Mockito.when(listingAddressFormatter.formatPublicPickupLocation(a)).thenReturn("Av. Centro");
+        Mockito.when(listingAddressFormatter.formatPublicPickupLocation(b)).thenReturn("Av. Centro");
 
-        // 2. Act + Assert
-        Assertions.assertThrows(ListingValidationException.class, () ->
-                listingAvailabilityService.applyOwnerWithdrawAvailability(LISTING_ID, 555L));
+        final List<BookableSegmentProjection> result =
+                listingAvailabilityService.getBookableSegmentsForRiderDatePickerByCar(CAR_ID, farFutureInstant(aStart));
+
+        Assertions.assertEquals(2, result.size());
+        Assertions.assertEquals(aStart, result.get(0).getFrom());
+        Assertions.assertEquals(aEnd, result.get(0).getTo());
+        Assertions.assertEquals(PRICE, result.get(0).getDayPrice());
+        Assertions.assertEquals(bStart, result.get(1).getFrom());
+        Assertions.assertEquals(bEnd, result.get(1).getTo());
+        Assertions.assertEquals(priceB, result.get(1).getDayPrice());
     }
 
     @Test
-    public void testApplyOwnerWithdrawAvailabilityThrowsValidationWhenTargetBelongsToAnotherListing() {
-        // 1. Arrange — target listing.id is 999, not LISTING_ID.
-        final Listing otherListing = Mockito.mock(Listing.class);
-        Mockito.when(otherListing.getId()).thenReturn(999L);
-        final ListingAvailability target = ListingAvailability.builder()
-                .id(555L).listing(otherListing)
-                .startInclusive(LocalDate.of(2026, 8, 1)).endInclusive(LocalDate.of(2026, 8, 10))
-                .kind(ListingAvailability.Kind.OFFERED).build();
-        Mockito.when(listingAvailabilityDao.findById(555L)).thenReturn(Optional.of(target));
+    public void testGetBookableSegmentsKeepsSeparateWhenContiguousButDifferentCheckInTime() {
+        final LocalDate aStart = LocalDate.of(2030, 11, 1);
+        final LocalDate aEnd = LocalDate.of(2030, 11, 3);
+        final LocalDate bStart = LocalDate.of(2030, 11, 4);
+        final LocalDate bEnd = LocalDate.of(2030, 11, 6);
+        final ListingAvailability a = buildAvailabilityWith(
+                40L, CAR_ID, aStart, aEnd, PRICE, CHECK_IN, CHECK_OUT, "Av. Centro");
+        final ListingAvailability b = buildAvailabilityWith(
+                41L, CAR_ID, bStart, bEnd, PRICE, LocalTime.of(8, 0), CHECK_OUT, "Av. Centro");
+        Mockito.when(listingAvailabilityDao.findByCarId(CAR_ID)).thenReturn(List.of(a, b));
+        Mockito.when(reservationService.findBlockingReservationsByCarId(CAR_ID)).thenReturn(List.of());
+        Mockito.when(reservationService.getConfiguredPickupLeadHours()).thenReturn(24);
+        for (LocalDate d = aStart; !d.isAfter(aEnd); d = d.plusDays(1)) {
+            Mockito.when(listingAvailabilityDao.findEffectiveForDayByCar(CAR_ID, d)).thenReturn(Optional.of(a));
+        }
+        for (LocalDate d = bStart; !d.isAfter(bEnd); d = d.plusDays(1)) {
+            Mockito.when(listingAvailabilityDao.findEffectiveForDayByCar(CAR_ID, d)).thenReturn(Optional.of(b));
+        }
+        Mockito.when(listingAddressFormatter.formatPublicPickupLocation(a)).thenReturn("Av. Centro");
+        Mockito.when(listingAddressFormatter.formatPublicPickupLocation(b)).thenReturn("Av. Centro");
 
-        // 2. Act + Assert
-        Assertions.assertThrows(ListingValidationException.class, () ->
-                listingAvailabilityService.applyOwnerWithdrawAvailability(LISTING_ID, 555L));
+        final List<BookableSegmentProjection> result =
+                listingAvailabilityService.getBookableSegmentsForRiderDatePickerByCar(CAR_ID, farFutureInstant(aStart));
+
+        Assertions.assertEquals(2, result.size());
+        Assertions.assertEquals(CHECK_IN, result.get(0).getCheckInTime());
+        Assertions.assertEquals(LocalTime.of(8, 0), result.get(1).getCheckInTime());
     }
 
     @Test
-    public void testApplyOwnerWithdrawAvailabilityThrowsValidationWhenTargetAlreadyWithdrawn() {
-        // 1. Arrange
-        final Listing listingRef = Mockito.mock(Listing.class);
-        Mockito.when(listingRef.getId()).thenReturn(LISTING_ID);
-        final ListingAvailability target = ListingAvailability.builder()
-                .id(555L).listing(listingRef)
-                .startInclusive(LocalDate.of(2026, 8, 1)).endInclusive(LocalDate.of(2026, 8, 10))
-                .kind(ListingAvailability.Kind.WITHDRAWN).build();
-        Mockito.when(listingAvailabilityDao.findById(555L)).thenReturn(Optional.of(target));
-
-        // 2. Act + Assert
-        Assertions.assertThrows(ListingValidationException.class, () ->
-                listingAvailabilityService.applyOwnerWithdrawAvailability(LISTING_ID, 555L));
-    }
-
-    @Test
-    public void testApplyOwnerWithdrawAvailabilityThrowsConflictWhenBlockingReservationOverlaps() {
-        // 1. Arrange — target is OFFERED [1/8, 10/8]; reservation on day 5/8.
-        final Listing listingRef = Mockito.mock(Listing.class);
-        Mockito.when(listingRef.getId()).thenReturn(LISTING_ID);
-        final ListingAvailability target = ListingAvailability.builder()
-                .id(555L).listing(listingRef)
-                .startInclusive(LocalDate.of(2026, 8, 1)).endInclusive(LocalDate.of(2026, 8, 10))
-                .dayPrice(PRICE).startPointStreet("Street")
-                .checkInTime(CHECK_IN).checkOutTime(CHECK_OUT)
-                .kind(ListingAvailability.Kind.OFFERED).build();
-        Mockito.when(listingAvailabilityDao.findById(555L)).thenReturn(Optional.of(target));
-        final Reservation blocking = Mockito.mock(Reservation.class);
-        Mockito.when(blocking.getStartDate())
-                .thenReturn(LocalDate.of(2026, 8, 5).atStartOfDay(AvailabilityPeriod.WALL_ZONE).toOffsetDateTime());
-        Mockito.when(blocking.getEndDate())
-                .thenReturn(LocalDate.of(2026, 8, 6).atStartOfDay(AvailabilityPeriod.WALL_ZONE).toOffsetDateTime());
-        Mockito.when(reservationService.findBlockingReservationsByListingIdInRange(
-                        Mockito.eq(LISTING_ID), Mockito.any(), Mockito.any()))
-                .thenReturn(List.of(blocking));
-
-        // 2. Act + Assert
-        Assertions.assertThrows(ReservationConflictException.class, () ->
-                listingAvailabilityService.applyOwnerWithdrawAvailability(LISTING_ID, 555L));
-    }
-
-    @Test
-    public void testFindEffectiveForDayDelegatesToDao() {
-        final long listingId = 12L;
-        final LocalDate day = LocalDate.of(2026, 8, 5);
-        final OffsetDateTime t = OffsetDateTime.parse("2026-07-01T10:00:00Z");
-        final ListingAvailability winner = new ListingAvailability(
-                77L, Mockito.mock(Listing.class), day.minusDays(2), day.plusDays(2), t, t);
-        Mockito.when(listingAvailabilityDao.findEffectiveForDay(listingId, day)).thenReturn(Optional.of(winner));
-
-        final Optional<ListingAvailability> result = listingAvailabilityService.findEffectiveForDay(listingId, day);
-
-        Assertions.assertTrue(result.isPresent());
-        Assertions.assertSame(winner, result.get());
-    }
-
-    @Test
-    public void testFindOverlappingRangeDelegatesToDao() {
-        final long listingId = 12L;
+    public void testFindOverlappingRangeByCarDelegatesToDao() {
         final LocalDate from = LocalDate.of(2026, 8, 1);
         final LocalDate to = LocalDate.of(2026, 8, 31);
-        final OffsetDateTime t = OffsetDateTime.parse("2026-07-01T10:00:00Z");
-        final ListingAvailability row = new ListingAvailability(
-                88L, Mockito.mock(Listing.class), from, to, t, t);
-        Mockito.when(listingAvailabilityDao.findOverlappingRange(listingId, from, to)).thenReturn(List.of(row));
+        final ListingAvailability row = buildAvailability(88L, CAR_ID, from, to, ListingAvailability.Kind.OFFERED);
+        Mockito.when(listingAvailabilityDao.findOverlappingRangeByCar(CAR_ID, from, to)).thenReturn(List.of(row));
 
-        final List<ListingAvailability> result = listingAvailabilityService.findOverlappingRange(listingId, from, to);
+        final List<ListingAvailability> result = listingAvailabilityService.findOverlappingRangeByCar(CAR_ID, from, to);
 
         Assertions.assertEquals(1, result.size());
         Assertions.assertSame(row, result.get(0));
